# ChangeLog for media-sound/kmp
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/kmp/Attic/ChangeLog,v 1.9 2006/02/09 13:54:08 caleb Exp $

  09 Feb 2006; Caleb Tennis <caleb@gentoo.org> kmp-0.5.ebuild:
  Fix configure script to find qt3

  08 Jan 2006; Diego Pettenò <flameeyes@gentoo.org> metadata.xml:
  Remove retiring dev from metadata.

*kmp-0.5 (04 May 2005)

  04 May 2005; Jan Brinkmann <luckyduck@gentoo.org> kmp-0.01.ebuild,
  +kmp-0.5.ebuild:
  new upstream version, fixes #91395

  22 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org> kmp-0.01.ebuild:
  Stable sparc.

  28 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org> kmp-0.01.ebuild:
  Stable amd64.  Added ~sparc.

  14 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org> kmp-0.01.ebuild:
  Added ~amd64.  Stable x86.

  30 Aug 2004; David Holm <dholm@gentoo.org> kmp-0.01.ebuild:
  Added to ~ppc.

  25 Aug 2004; Patrick Dawson <pkdawson@gentoo.org> kmp-0.01.ebuild :
  Added a fix for gcc-3.4.

*kmp-0.01 (07 Aug 2004)

  07 Aug 2004; Patrick Dawson <pkdawson@gentoo.org> kmp-0.01.ebuild :
  Initial import.
