@@ -1,1 +1,3 @@
 MD5 2b2607beea11b1feb53c5a5fd39cb721 kmp-0.01.tar.bz2 486474
+RMD160 ba880f7483dcb0f4772a7f41cd79ef1309fd5e58 kmp-0.01.tar.bz2 486474
+SHA256 a4abc14a5daa342e130e54049f56fafa1d75c7ac9c5369762df994aeed402607 kmp-0.01.tar.bz2 486474
