@@ -1,13 +1,13 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/kmp/Attic/kmp-0.01.ebuild,v 1.7 2005/05/04 16:04:18 luckyduck Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/kmp/Attic/kmp-0.01.ebuild,v 1.8 2007/02/05 22:39:33 ticho Exp $
 
 inherit eutils kde-functions
 
 need-qt 3
 
 DESCRIPTION="An MPD client that uses Qt"
-HOMEPAGE="http://www.threadbox.net/kmp.php"
+HOMEPAGE="http://www.threadbox.net/pages/kmp"
 SRC_URI="http://www.threadbox.net/code/files/kmp/${P}.tar.bz2"
 
 LICENSE="GPL-2"
