@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>sound</herd>
+	<herd>sound</herd>
+	<maintainer>
+		<email>ticho@gentoo.org</email>
+		<name>Andrej Kacian</name>
+	</maintainer>
 </pkgmetadata>
