@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/kmp
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/kmp/Attic/ChangeLog,v 1.9 2006/02/09 13:54:08 caleb Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/kmp/Attic/ChangeLog,v 1.10 2007/02/05 22:39:33 ticho Exp $
+
+  05 Feb 2007; Andrej Kacian <ticho@gentoo.org> metadata.xml,
+  kmp-0.01.ebuild, kmp-0.5.ebuild:
+  Update HOMEPAGE, as suggested by Sebastian <sebastian_ml at gmx.net>, bug
+  #165438. Added myself to metadata.xml as maintainer.
 
   09 Feb 2006; Caleb Tennis <caleb@gentoo.org> kmp-0.5.ebuild:
   Fix configure script to find qt3
